# Virtual workspace root for the kesulu-ui design system.
#   crates/*      — buildable members (the `kesulu-ui` lib, the `showcase` demo,
#                   and future siblings like charts/icons): one shared lockfile,
#                   checked/built together.
#   templates/*   — starter scaffolds for new apps (macOS/iOS Tauri+Leptos).
#                   EXCLUDED: they are copied/`cargo-generate`d to bootstrap a
#                   project, not built in place, and may carry `{{placeholder}}`
#                   syntax that would break cargo resolution.
[workspace]
resolver = "3"
members = ["crates/*"]
exclude = ["templates/*"]
